fix menu styling on mobile

--- a/src/app/shared/nav-menu/nav-menu.component.scss
+++ b/src/app/shared/nav-menu/nav-menu.component.scss
@@ -153,8 +153,12 @@
     z-index: 999;
     background: var(--clr-neutral-100);
 
-    p {
+    .nav-menu-logo {
         font-weight: 600;
+        color:var(--clr-neutral-900);
+        text-decoration: none;
+        cursor: pointer;
+        z-index: 9999;
     }
 
     .nav-menu-mobile-list {
@@ -237,10 +241,15 @@
         .bg {
             display: none;
         }
+
+        a {
+            color: var(--clr-neutral-100);
+        }
     }
     
     &[data-main-component="false"] {
         color: var(--clr-neutral-900);
+        background: transparent;
 
         .nav-menu-icon .nav-menu-icon-dot, .nav-menu-list li::before {
             background-color: var(--clr-neutral-900);
